--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ border: 0px;
 
 section{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 30px;
     border: 1px solid rgb(186, 186, 186);
     display: block;
