--- a/style.css
+++ b/style.css
@@ -23,11 +23,13 @@ section{
     font-size: 30px;
     border: 1px solid rgb(186, 186, 186);
     display: block;
+    margin: 3%;
 }
 
 img{
     max-width: 350px;
     height: auto;
+    border: 3px solid rgb(186, 186, 186);
 }
 
 ul {
@@ -40,6 +42,7 @@ ul {
   
   li {
     float: left;
+   
   }
   
   li a {
@@ -48,10 +51,20 @@ ul {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+
   }
   
   
   li a:hover {
     background-image: linear-gradient( rgb(232, 215, 194), rgb(191, 228, 191));
     border: 1px solid rgb(186, 186, 186);
+    text-decoration: underline;
+  }
+
+  .contact{
+    display: block;
+    text-align: center;
+    background-image: linear-gradient( rgb(232, 215, 194), rgb(178, 253, 233));
+     margin-inline: 15%;
+
   }
